update translation z-index issue, set to much higher again ..

--- a/src/frontend/src/components/core/layout/mainLayout/MainLayout.scss
+++ b/src/frontend/src/components/core/layout/mainLayout/MainLayout.scss
@@ -160,5 +160,5 @@
 
 // show dropdown-menu-end
 .show.dropdown-menu-end {
-  z-index: 1000;
+  z-index: 7777;
 }
